<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvNumber1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="43dp"
        android:minWidth="120dp"
        android:padding="5dp"
        android:text="@string/calculator_number1" />

    <EditText
        android:id="@+id/etNumber1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="6dp"
        android:layout_toRightOf="@id/tvNumber1"
        android:minHeight="20dp"
        android:text="@string/calculator_default_value" />

    <TextView
        android:id="@+id/tvNumber2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvNumber1"
        android:gravity="center_vertical"
        android:minHeight="43dp"
        android:minWidth="120dp"
        android:padding="5dp"
        android:text="@string/calculator_number2" />

    <EditText
        android:id="@+id/etNumber2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etNumber1"
        android:layout_marginLeft="6dp"
        android:layout_toRightOf="@id/tvNumber1"
        android:minHeight="20dp"
        android:text="@string/calculator_default_value" />

    <TextView
        android:id="@+id/tvOperationsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvNumber2"
        android:gravity="center_vertical"
        android:minHeight="35dp"
        android:minWidth="120dp"
        android:padding="6dp"
        android:text="@string/calculator_operation"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/rgOperations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvOperationsTitle"
        android:gravity="center_vertical"
        android:minHeight="35dp"
        android:orientation="horizontal"
        android:padding="6dp">

        <RadioButton
            android:id="@+id/rbAddition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:text="@string/calculator_operation_add" />

        <RadioButton
            android:id="@+id/rbSubtraction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:text="@string/calculator_operation_sub" />

        <RadioButton
            android:id="@+id/rbMultiplication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:text="@string/calculator_operation_multiply" />

        <RadioButton
            android:id="@+id/rbDivision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:text="@string/calculator_operation_divide" />
    </RadioGroup>

    <Button
        android:id="@+id/btCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/rgOperations"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/calculator_button_text" />

    <TextView
        android:id="@+id/tvResultTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btCalculate"
        android:minHeight="35dp"
        android:padding="6dp"
        android:text="@string/calculator_result_title"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tvResultTitle"
        android:gravity="center_vertical"
        android:padding="6dp"
        android:text="@string/calculator_default_value"
        android:textSize="30sp" />
</RelativeLayout>